2011-04-07 Rene Kluwen <rene.kluwen at chimit.nl>
    * gw/opensmppbox.c: Tested system_type on being provided by the smpp client,
    because if not, opensmppbox would crash. Thanks to info at xen-housing.sk for reporting.

2010-11-10 Alexander Malysh <amalysh at kannel.org>
    * gw/opensmppbox.c: applied patch that adds validity and deferred handling.
      Thanks to "XEN-Housing s.r.o." <info at xen-housing.sk> and me :-) for this patch.

2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * gw/opensmppbox.c: remove 0-padding for %s type from snprintf(), as it
      is not defined according to the man page and we get compiler warnings.
      
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * gw/opensmppbox.c: remove various compiler warnings. NLC.
    
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * autotools/*, gw/Makefile.in, aclocal.m4, configure, Makefile.in: new 
      configure file after bootstrapping for distribution.
      
2010-10-06  Stipe Tolj  <stolj at kannel.org>
    * */*: changing the add-on module name to OpenSMPPBox, along with all 
      references in the output and the configuration file aspects.
    
2010/09/15
    Sending negative ack upon receiving invalid MO/DLR so messages won't stay in bearerbox store.
    Patch by Victor Luchitz.

2010/08/23
    1. Respects softfail from bearerbox (ack_failed_tmp).
    2. Propagates message priority in submit_sm further to bearerbox in Msg struct.
    Thanks to Victor Luchitz for reporting.

2010/08/22
    Fixed bug reported by boooch@gmail.com as where authentication including system_type would always fail.

2010/08/19
    1) add support for message_payload TLV for deliver_sm packets. This TLV is used in case a smpp meta-flag "use_message_payload" is set.
    2) brings smppbox in conformity with SMPP v3.4 in regarding shedule_delivery_time and validiy_period fields in deliver_sm packets.